fix sidenavCollapse button width

--- a/Quiz-web/src/app/app.component.css
+++ b/Quiz-web/src/app/app.component.css
@@ -73,8 +73,8 @@ a, a:hover, a:focus {
 }
 
 #sidebarCollapse {
-  width: 40px;
-  height: 40px;
+  width: 40px !important;
+  height: 40px !important;
   background: #f5f5f5;
   cursor: pointer;
 }
